Squash bugs and allow method for clearing image search

--- a/imagespace/web_external/stylesheets/layout.styl
+++ b/imagespace/web_external/stylesheets/layout.styl
@@ -130,11 +130,11 @@ $portraitHeight = 38px
     border-radius 0px
 
 .im-search-form
-    width 70%
+    width 60%
 
 .im-search-form-group
-    width 60%
-    padding-left 200px
+    width 80%
+    padding-left 100px
 
 .im-image-search-form
     float left
